styles/Navbar.module.scss
.show {
  display: block;
}

.hide {
  display: none;
}

.navbar_wrapper {
  top: 0;
  width: 100%;
  background-color: white;
  display: flex;
  flex-direction: column;
  position: fixed;
}

.header {
  background: rgba(255, 255, 255, 0.5);
  height: 45px;
}

.headline {
  text-align: center;
  padding: 0;
}

